--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint --cache \"./src/**/*.{ts,tsx,jsx,js}\" --max-warnings=0",
+    "lint:fix": "yarn lint --fix ",
+    "validate": "yarn prettier --check \"./src/**/*.{ts,tsx,js,jsx}\" && yarn lint ",
+    "format": "prettier --write \"./src/**/*.{ts,tsx,js,jsx}\"",
+    "format:test": "prettier --write \"./src/**/*.spec.{ts,tsx,js,jsx}\"",
+    "husky:install": "husky install"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -23,12 +28,21 @@
     "@react-native/typescript-config": "^0.73.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
     "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-prettier": "^5.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "husky": "^8.0.3",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "prettier": "^3.1.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "*"
   },
   "engines": {
     "node": ">=18"
