--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,16 @@
   "extends": "@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
     "strict": true,
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "paths": {
+      "@components/*": ["./components/*"],
+      "@utils/*": ["./utils/*"],
+      "@hooks/*": ["./hooks/*"],
+      "@navigators/*": ["./navigators/*"],
+      "@screens/*": ["./screens/*"],
+      "@theme/*": ["./theme/*"],
+      "@store/*": ["./store/*"],
+      "@type/*": ["./type/*"],
+    }
   }
 }
