feat: implemented home screen logic and ui - added mobx for state managent - added react navigation - added icon library - created product card, logo, product list

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
       "@theme/*": ["./theme/*"],
       "@store/*": ["./store/*"],
       "@type/*": ["./type/*"],
+      "@services/*": ["./services/*"],
+      "@containers/*": ["./containers/*"],
     }
   }
 }
