--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.2",
     "lucide-react-native": "^0.299.0",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
